# user-profile-segmentation

./: .gitignore  docker-compose.yml  pyproject.toml  test.ipynb
minio/.minio.sys/: format.json
pg_data/: postmaster.pid
pg_data/base/1/: 2619
pg_data/base/13780/: pg_internal.init
pg_data/base/16384/: 1247  1249  1259  16385  16386  16392  16393  16395  16412  16416  16417  16424  16446  16449  16457  16463  16471  16474  16481  16481_vm  16485  16486  16488  16488_fsm  16492  16493  16500  16500_fsm  16500_vm  16505  16511  16519  16523  16524  16534  16535  16536  16537  16538  16542  (+50 more)
pg_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
pg_data/pg_multixact/members/: 0000
pg_data/pg_multixact/offsets/: 0000
pg_data/pg_stat_tmp/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
pg_data/pg_xact/: 0000
user_profile_segmentation/config/: config.py
user_profile_segmentation/data/: custom.py  processing.py
user_profile_segmentation/model/evaluation/: evaluation.py
user_profile_segmentation/model/evaluation/dbscan_features/: trained_dbscan_features.pkl
user_profile_segmentation/model/evaluation/hierarchical_features/: trained_hierarchical_features.pkl
user_profile_segmentation/model/evaluation/kmeans_features/: trained_kmeans_features.pkl
user_profile_segmentation/model/evaluation/spectral_features/: trained_spectral_features.pkl
user_profile_segmentation/model/training/: training.py
user_profile_segmentation/notebooks/: eda.ipynb
(+7 files in other folders)
